client/src/pages/css/Home.css
/* First Section: Hero */
.hero_section {
  min-height: 100vh;
  background-color: #dbeffd;
  display: flex;
  align-items: flex-end;
}

.hero_section h1 {
  font-weight: 800;
  font-size: 80px;
  letter-spacing: -2px;
  color: #0b1a2e;
  margin-bottom: 97px;
  max-width: 541px;
  line-height: 90px;
}

.hero_wrap {
  display: flex;
  margin: 0 auto;
  width: 80vw;
  overflow: hidden;
}

.container-left {
  width: 56.25%;
  padding-top: 153px;
}

.container-right {
  width: 43.25%;
}

.container-right img {
  position: relative;
  top: 3px;
}

.search {
  display: flex;
  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
  align-items: center;
  border-radius: 10px;
  overflow: hidden;
  width: fit-content;
  margin-bottom: 100px;
}

.hero_section .search input {
  padding: 20.5px;
  padding-left: 65px;
  font-size: 20px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  width: 310px;
}

.hero_section .search input::placeholder {
  color: #0b1a2e;
  opacity: 0.19;
}

.search_icon {
  width: 25px;
  position: absolute;
  z-index: 2;
  margin-left: 25px;
}

.hero_section .search .btn {
  font-weight: 700;
  padding: 22px 32px;
  font-size: 20px;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.author_name {
  color: var(--primary);
}

.author_name:hover {
  border-bottom: dashed 2px var(--primary);
  padding-bottom: 2px;
}

/* Second Section: As used by */
.as_used_by {
  padding-left: 4vw;
  padding-right: 4vw;
}

.as_used_by_wrapper {
  border-bottom: 1px solid #dfe6f8;
  display: flex;
  align-items: center;
  padding: 70px 4vw;
}

.img_row {
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-grow: 1;
}

.as_used_by_text {
  font-weight: 600;
  font-size: 28px;
  color: #0b1a2e60;
  margin-right: 4vw;
}

/* Third Section: Numbers */
.job_posted {
  padding-top: 80px;
  padding-bottom: 70px;
  text-align: center;
}

.number {
  font-weight: 800;
  font-size: 97px;
  letter-spacing: -2.42px;
  color: #0b1a2e;
}

.super {
  font-weight: 800;
  font-size: 76px;
  letter-spacing: -1.9px;
  color: #5a54f2;
  vertical-align: super;
  margin-left: 10px;
}

.text {
  font-weight: 600;
  font-size: 23px;
  letter-spacing: -0.57px;
  color: #0b1a2e;
  opacity: 0.33;
  margin-top: 10px;
}

/* Fourth Section: Job List */
.job_list {
  padding-top: 50px;
  padding-bottom: 100px;
  display: flex;
  flex-wrap: nowrap;
  overflow-x: auto;
  -webkit-overflow-scrolling: touch;
}

.job_list::-webkit-scrollbar {
  display: none;
}

.spacer {
  padding: 25px;
}

.hover_controller {
  height: 370px;
  display: flex;
  align-items: flex-end;
}

.hover_controller:hover > .one_card {
  margin-bottom: 20px;
  box-shadow: 5px 15px 30px rgba(0, 0, 0, 0.075),
    10px 30px 60px rgba(0, 0, 0, 0.0375), 20px 60px 120px rgba(0, 0, 0, 0.01875);
}

.one_card {
  width: 368px;
  height: 350px;
  background-color: white;
  border-radius: 20px;
  box-shadow: 5px 15px 30px rgba(0, 0, 0, 0.075);
  margin-left: 50px;
  padding: 50px;
  box-sizing: border-box;
  flex: 0 0 auto;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  user-select: none;
  cursor: pointer;
  transition: margin-bottom 0.3s ease, box-shadow 0.3s ease;
}

.one_card:active {
  opacity: 0.7;
}

.poster_info {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.left {
  display: flex;
  align-items: center;
  width: 70%;
}

.poster_photo {
  width: 32px;
  height: 32px;
  border-radius: 16px;
  margin-right: 15px;
}

.poster_name {
  letter-spacing: -0.4px;
  color: #0b1a2e;
  margin-right: 20px;
}

.post_time {
  letter-spacing: -0.4px;
  color: #0b1a2e;
  opacity: 0.33;
  font-size: 12px;
}

.post_title {
  font-weight: 700;
  font-size: 26px;
  letter-spacing: -0.65px;
  color: #0b1a2e;
  line-height: 130%;
}

.job_type_loc {
  font-weight: 600;
  letter-spacing: -0.4px;
  color: #0b1a2e;
  opacity: 0.33;
  margin-top: 15px;
}

.tag {
  display: flex;
  font-size: 14px;
  letter-spacing: -0.35px;
  color: #0b1a2e;
}

.fade-in-left {
  -webkit-animation: fade-in-left 1s cubic-bezier(0.39, 0.575, 0.565, 1) both;
  animation: fade-in-left 1s cubic-bezier(0.39, 0.575, 0.565, 1) both;
}

/* ----------------------------------------------
 * Generated by Animista on 2020-5-31 11:30:55
 * Licensed under FreeBSD License.
 * See http://animista.net/license for more info. 
 * w: http://animista.net, t: @cssanimista
 * ---------------------------------------------- */

/**
 * ----------------------------------------
 * animation fade-in-left
 * ----------------------------------------
 */
@-webkit-keyframes fade-in-left {
  0% {
    -webkit-transform: translateX(-50px);
    transform: translateX(-50px);
    opacity: 0;
  }
  100% {
    -webkit-transform: translateX(0);
    transform: translateX(0);
    opacity: 1;
  }
}

@keyframes fade-in-left {
  0% {
    -webkit-transform: translateX(-50px);
    transform: translateX(-50px);
    opacity: 0;
  }
  100% {
    -webkit-transform: translateX(0);
    transform: translateX(0);
    opacity: 1;
  }
}

.fade-in-right {
  -webkit-animation: fade-in-right 1s cubic-bezier(0.39, 0.575, 0.565, 1) both;
  animation: fade-in-right 1s cubic-bezier(0.39, 0.575, 0.565, 1) both;
}

/* ----------------------------------------------
 * Generated by Animista on 2020-5-31 11:31:48
 * Licensed under FreeBSD License.
 * See http://animista.net/license for more info. 
 * w: http://animista.net, t: @cssanimista
 * ---------------------------------------------- */

/**
 * ----------------------------------------
 * animation fade-in-right
 * ----------------------------------------
 */
@-webkit-keyframes fade-in-right {
  0% {
    -webkit-transform: translateX(50px);
    transform: translateX(50px);
    opacity: 0;
  }
  100% {
    -webkit-transform: translateX(0);
    transform: translateX(0);
    opacity: 1;
  }
}
/* ... */

